--- a/mock/middlewares/deer-router/_template.ejs
+++ b/mock/middlewares/deer-router/_template.ejs
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://cdn.bootcss.com/twitter-bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
     <base target="_blank" /> 
-    <title>Deer-router</title>
+    <title>Json-Server-Router</title>
 </head>
 
 <body>
@@ -22,7 +22,7 @@
         ${body}
     </div>
 
-    <footer class="text-center">json-server middleware Deer-Router</footer>
+    <footer class="text-center">json-server middleware Json-Server-Router</footer>
 </body>
 
 </html>
